Fixed Add Music over first delete button and added Scrollbar to third div and added comments

--- a/main.css
+++ b/main.css
@@ -21,7 +21,8 @@ div.second {
 
 div.third {
   width: 67%;
-  height: 670px;
+  height: 370px;
+  overflow: scroll;
   border: 2px solid black;
   background-color: #FEFAC0;
   float: right;
@@ -107,6 +108,7 @@ span.songTitle {
 
 .hidden {
   position: absolute;
+  z-index: -1;
   opacity: 0;
   height: 0px;
 }
